<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>br.com.rotinamais</groupId>
  <artifactId>rotinamais-desktop</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>RotinaMaisDesktop</name>

<properties>
  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  <maven.compiler.source>1.8</maven.compiler.source>
  <maven.compiler.target>1.8</maven.compiler.target>
  <jpa.version>2.2</jpa.version>
  <hibernate.version>5.6.15.Final</hibernate.version>
  <postgres.version>42.7.7</postgres.version>
    <selenium.version>3.141.59</selenium.version>
    <!-- WebDriverManager 4.4.3 ainda suporta Java 8 -->
    <webdrivermanager.version>4.4.3</webdrivermanager.version>
</properties>


  <dependencies>
    <!-- MigLayout (corrigir para 5.3) -->
    <dependency>
      <groupId>com.miglayout</groupId>
      <artifactId>miglayout-swing</artifactId>
      <version>5.3</version>
    </dependency>

    <!-- API JPA -->
    <dependency>
      <groupId>javax.persistence</groupId>
      <artifactId>javax.persistence-api</artifactId>
      <version>${jpa.version}</version>
    </dependency>

    <!-- Implementação: Hibernate ORM -->
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
    </dependency>

    <!-- Driver PostgreSQL -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgres.version}</version>
    </dependency>
<dependency>
    <groupId>net.java.dev.timingframework</groupId>
    <artifactId>timingframework</artifactId>
    <version>1.0</version>
</dependency>

    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
    </dependency>
    
      <!-- PostgreSQL real embutido -->
  <dependency>
    <groupId>io.zonky.test</groupId>
    <artifactId>embedded-postgres</artifactId>
    <version>2.1.1</version>
  </dependency>


  <!-- Recomendo para criar/atualizar schema automaticamente -->
  <dependency>
    <groupId>org.flywaydb</groupId>
    <artifactId>flyway-core</artifactId>
    <version>10.16.0</version>
  </dependency>

    
  </dependencies>


<build>
  <plugins>
  
      <plugin>
      <groupId>org.codehaus.mojo</groupId>
      <artifactId>exec-maven-plugin</artifactId>
      <version>3.5.0</version>
      <configuration>
        <classpathScope>runtime</classpathScope>
      </configuration>
    </plugin>
  
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.8.1</version> <!-- 3.8.1 é bem estável no JDK 8 -->
      <configuration>
        <source>${maven.compiler.source}</source>
        <target>${maven.compiler.target}</target>
        <encoding>${project.build.sourceEncoding}</encoding>
      </configuration>
    </plugin>

    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-jar-plugin</artifactId>
      <version>3.4.1</version>
      <configuration>
        <archive>
          <manifest>
            <addClasspath>true</addClasspath>
            <mainClass>main.Main</mainClass>
          </manifest>
        </archive>
      </configuration>
    </plugin>
  </plugins>
</build>
</project>